--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ball game</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>The ball game</h1>
+
+    <div class="ball">100</div>
     
 </body>
 </html>
