--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>The ball game</h1>
 
-    <div class="ball">100</div>
-    
+    <div class="ball" onclick="onBallClick()">100</div>
+    <script src="js/main.js"></script>
 </body>
 </html>
